- Include application in  experiment tree label for advanced search, amend request  
- Dictionary editor - maintain selection when dictionary entry added, edited, removed
- Maintain the last selection on billing period combo on Billing screen
- Fixed some compile warnings related to parameterized collections.
- Add lastModifyDate to request (experiment)

4.6.6 
-------------------------
- Organize sequencing applications by theme
- Add sample lib prep conditions/treatments 
- Fix bug that was causing request category name, application name to double, triple
- Fix bug that was causing required border (yellow) to appear around microarray dropdown on microarray edit screen
- Fix typo in instruction box on microarray edit screen, hyb setup tab
- Add 'On Hold', 'In Progress' status to work item; persist status on work item 
- Get rid of Flow Cell Stock work list
- Show status on Illumina cluster gen work list
 

4.6.5 (Apr 28, 2010)
------------------------
- Format email to verify lab's user accounts with HTML instead of plain text.
- Add isActive to lab.  Show (inactive) verbiage in list of users.
- Fix refresh after save of user and group.
- Fix Type #1090 error caused due to mis-timed event-handling when looking up by experiment or analysis
- Fix scoping when looking up analysis or experiment not in user's lab.
- Show different states on home view for admin, non-submitting user (no lab assigned) or guest.
- Show padding for download button on analysis detail.


4.6.4 (Apr 25, 2010)
------------------------
 - Auto-email group contact to verify active user accounts.
 

4.6.2 (Apr 12, 2010)
-------------------------
- Fix cy3 and cy5 radio buttons so that renderer works with scrolling.  Switched to using checkboxes.
- Fixed problem with seq app and microarray app radio button repeaters that were not refreshing after first submit request.